--- a/contato.html
+++ b/contato.html
@@ -33,7 +33,7 @@
                     <li><a href="index.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Início</a></li>
                     <!-- Link "Notícias" apontando para noticias.html -->
                     <li><a href="noticias.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
+                    <li><a href="analises.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
                     <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
                     <!-- Link "Contato" na própria página de contato -->
                     <li><a href="contato.html" class="text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
