--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <li><a href="index.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Início</a></li>
                     <!-- Link "Notícias" para a página de notícias -->
                     <li><a href="noticias.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
+                    <li><a href="analises.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
                     <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
                     <!-- Link "Contato" para a página de contato -->
                     <li><a href="contato.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
@@ -62,7 +62,7 @@
 
     <!-- Seção Principal de Conteúdo -->
     <main class="container mx-auto px-4 py-8">
-        <!-- Notícia em Destaque (Hero Section) - Agora com foco em REMATCH e vídeo de Elden Ring -->
+        <!-- Notícia em Destaque (Hero Section) - Agora com foco na Análise de REMATCH -->
         <section class="mb-12 bg-gray-800 rounded-lg shadow-xl overflow-hidden md:flex">
             <div class="md:w-1/2">
                 <!-- Wrapper para manter o aspecto do vídeo responsivo (16:9) -->
@@ -84,15 +84,15 @@
             </div>
             <div class="md:w-1/2 p-6 flex flex-col justify-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white leading-tight">
-                    <!-- Título e link atualizados para a página da Steam do jogo REMATCH -->
-                    <a href="https://store.steampowered.com/app/2138720/REMATCH/" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">REMATCH: O Novo jogo de esporte que Chegou para Revolucionar na Steam!</a>
+                    <!-- Título e link AGORA atualizados para a página de análise de REMATCH -->
+                    <a href="analise_rematch.html" class="hover:text-blue-400 transition duration-300">Análise de jogo: REMATCH – Minhas Primeiras Impressões!</a>
                 </h2>
                 <p class="text-gray-400 text-lg mb-6">
-                    Prepare-se para batalhas intensas e estratégicas em REMATCH! Domine o campo de batalha com sua equipe neste empolgante shooter tático.
+                    Mergulhe em nossa análise completa do novo jogo de esporte tático que está revolucionando a Steam!
                 </p>
-                <!-- Botão direcionando para a página da Steam de REMATCH -->
-                <a href="https://store.steampowered.com/app/2138720/REMATCH/" target="_blank" rel="noopener noreferrer" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
-                    Veja REMATCH na Steam
+                <!-- Botão AGORA direcionando para a página de análise de REMATCH -->
+                <a href="analise_rematch.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
+                    Leia a Análise Completa &rarr;
                 </a>
             </div>
         </section>
@@ -123,7 +123,7 @@
                     <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Imagem do jogo The Alters" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <!-- Link AGORA DIRECIONA PARA noticias2.html -->
+                            <!-- Título corrigido para "Trailer" -->
                             <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
