--- a/noticias.html
+++ b/noticias.html
@@ -34,7 +34,7 @@
                     <li><a href="index.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Início</a></li>
                     <!-- Link "Notícias" na própria página de notícias (pode ser útil para indicar a página atual) -->
                     <li><a href="noticias.html" class="text-blue-400 text-lg font-semibold transition duration-300">Notícias</a></li>
-                    <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
+                    <li><a href="analises.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Análises</a></li>
                     <li><a href="#" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">E-Sports</a></li>
                     <li><a href="contato.html" class="text-gray-300 hover:text-blue-400 text-lg font-semibold transition duration-300">Contato</a></li>
                 </ul>
@@ -67,7 +67,7 @@
                     <img src="https://i.ibb.co/xSL0VgB6/the-alters-1nzq5.jpg" alt="Imagem do jogo The Alters" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <!-- CORREÇÃO: "Thriller" alterado para "Trailer" no título -->
+                            <!-- Título corrigido para "Trailer" -->
                             <a href="noticias2.html" class="hover:text-blue-400 transition duration-300">The Alters: O Trailer de Sobrevivência e Múltiplas Realidades Chega Hoje!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
@@ -137,7 +137,7 @@
         </section>
     </main>
 
-    <!-- Rodapé do Site (Copiado para consistência) -->
+    <!-- Rodapé do Site -->
     <footer class="bg-gray-900 py-8 mt-12">
         <div class="container mx-auto px-4 text-center text-gray-400">
             <p>&copy; 2025 F5 Games. Todos os direitos reservados.</p>
