--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
             <div class="md:w-1/2 p-6 flex flex-col justify-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white leading-tight">
                     <!-- Título e link AGORA atualizados para a página de análise de REMATCH -->
-                    <a href="analise_rematch.html" class="hover:text-blue-400 transition duration-300">Análise de jogo: REMATCH – Minhas Primeiras Impressões!</a>
+                    <a href="analise1.html" class="hover:text-blue-400 transition duration-300">Análise de jogo: REMATCH – Minhas Primeiras Impressões!</a>
                 </h2>
                 <p class="text-gray-400 text-lg mb-6">
                     Mergulhe em nossa análise completa do novo jogo de esporte tático que está revolucionando a Steam!
                 </p>
                 <!-- Botão AGORA direcionando para a página de análise de REMATCH -->
-                <a href="analise_rematch.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
+                <a href="analise1.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-300 self-start">
                     Leia a Análise Completa &rarr;
                 </a>
             </div>
@@ -134,17 +134,18 @@
                     </div>
                 </article>
 
-                <!-- Card de Notícia 3 - Fechamento de estúdio -->
+                <!-- Card de Notícia 3 - AGORA LINKA PARA ANALISE1.HTML E COM A IMAGEM CORRETA -->
                 <article class="bg-gray-800 rounded-lg shadow-lg overflow-hidden transition duration-300 hover:shadow-2xl">
-                    <img src="https://placehold.co/600x338/EF4444/fff?text=Estúdio+Fechado" alt="Estúdio de Jogos Fechado" class="w-full h-48 object-cover">
+                    <!-- Imagem real do REMATCH -->
+                    <img src="https://i.ibb.co/V0QTGjfg/header.jpg" alt="Capa de REMATCH" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h4 class="text-xl font-semibold mb-3 text-white">
-                            <a href="https://f5games.com.br/noticia/estudio-renomado-fecha" target="_blank" rel="noopener noreferrer" class="hover:text-blue-400 transition duration-300">Estúdio Renomado Anuncia Fechamento Após Desempenho Fraco de Título</a>
+                            <a href="analise1.html" class="hover:text-blue-400 transition duration-300">Análise de Jogo: REMATCH – Minhas Primeiras Impressões!</a>
                         </h4>
                         <p class="text-gray-400 text-base mb-4">
-                            Uma triste notícia para a indústria: o estúdio por trás de [Nome do Jogo Famoso] encerra suas atividades. Saiba os detalhes.
+                            Aprofunde-se na nossa análise detalhada de REMATCH, o novo jogo de esporte tático que promete revolucionar!
                         </p>
-                        <a href="https://f5games.com.br/noticia/estudio-renomado-fecha" target="_blank" rel="noopener noreferrer" class="text-blue-400 hover:underline font-medium">Leia Mais &rarr;</a>
+                        <a href="analise1.html" class="text-blue-400 hover:underline font-medium">Leia a Análise &rarr;</a>
                     </div>
                 </article>
 
